--- a/github/workflows/main-pipeline.yml
+++ b/github/workflows/main-pipeline.yml
@@ -1,16 +1,498 @@
-name: Minimal V2V Test
+Name: 'V2V Enhanced Publisher - Complete Protocol Coverage'
 
 on:
+  schedule:
+    - cron: '0 */3 * * *'  # Every 3 hours for optimal freshness (UTC)
   workflow_dispatch:
   push:
     branches: [ main, master ]
-  schedule:
-    - cron: '0 0 * * *' # daily test
+    paths: 
+      - 'scraper.py'
+      - 'sources.json'
+      - '.github/workflows/**'
 
+env:
+  WORKFLOW_TIMEOUT_MINUTES: 58
+  PYTHON_VERSION: '3.11'
+
+permissions:
+  contents: write 
+  pages: write    
+  id-token: write 
+  
 jobs:
-  test_workflow:
+  enhanced_scraping:
     runs-on: ubuntu-latest
+    environment: Production
+    timeout-minutes: 50
+    
+    outputs:
+      configs_updated: ${{ steps.check_changes.outputs.configs_updated }}
+      xray_count: ${{ steps.stats.outputs.xray_count }}
+      singbox_count: ${{ steps.stats.outputs.singbox_count }}
+    
     steps:
-      - name: Report Success
-        run: |
-          echo "Minimal V2V Workflow started and succeeded!"
+    - name: 🚀 Checkout Repository
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+        token: ${{ secrets.GITHUB_TOKEN }}
+      timeout-minutes: 3
+
+    - name: 🐍 Setup Enhanced Python Environment
+      uses: actions/setup-python@v5
+      with:
+        python-version: ${{ env.PYTHON_VERSION }}
+        cache: 'pip'
+      timeout-minutes: 5
+
+    - name: 📦 Install Enhanced Dependencies
+      run: |
+        python -m pip install --upgrade pip wheel setuptools
+        pip install requests PyGithub PyYAML urllib3 certifi
+        pip install --upgrade requests urllib3
+        echo "✅ Dependencies installed successfully"
+      timeout-minutes: 5
+
+    - name: 🔧 Validate and Enhance Sources
+      run: |
+        # sources.json موجود است، فقط اعتبارسنجی کنیم
+        if [ -f "sources.json" ]; then
+          echo "✅ Found existing sources.json"
+          python -c "import json; json.load(open('sources.json'))" || {
+            echo "❌ Invalid sources.json format!"
+            exit 1
+          }
+        else
+          echo "❌ sources.json not found!"
+          exit 1
+        fi
+        
+        echo "✅ sources.json validated successfully"
+      timeout-minutes: 2
+
+    - name: 🔧 Execute Enhanced Scraper
+      timeout-minutes: 47 
+      run: |
+        echo "🚀 Starting enhanced V2V scraper..."
+        
+        # Run scraper with comprehensive timeout and error handling
+        timeout 2700 python scraper.py 2>&1 | tee scraper.log || {
+          exit_code=$?
+          echo "Scraper exit code: $exit_code"
+          
+          if [ $exit_code -eq 124 ]; then
+            echo "⏰ Scraper timeout - creating fallback files..."
+            
+            # Create comprehensive fallback structure
+            cat > all_live_configs.json << 'EOF'
+        {
+          "xray": {
+            "vless": [],
+            "vmess": [], 
+            "trojan": [],
+            "ss": []
+          },
+          "singbox": {
+            "vless": [],
+            "vmess": [],
+            "trojan": [],
+            "ss": [],
+            "hysteria2": [],
+            "hy2": [],
+            "tuic": []
+          }
+        }
+        EOF
+            
+            cat > clash_subscription.yml << 'EOF'
+        proxies: []
+        proxy-groups:
+          - name: V2V-Auto
+            type: select
+            proxies: []
+        rules:
+          - MATCH,DIRECT
+        EOF
+            
+            date +%s > cache_version.txt
+            echo "⚠️ Fallback files created due to timeout"
+          else
+            echo "❌ Scraper failed with exit code: $exit_code"
+            cat scraper.log | tail -50
+            exit 1
+          fi
+        }
+        
+        # Validate output files
+        for file in "all_live_configs.json" "clash_subscription.yml" "cache_version.txt"; do
+          if [ ! -f "$file" ]; then
+            echo "❌ Missing output file: $file"
+            exit 1
+          fi
+          echo "✅ Found $file ($(wc -c < "$file") bytes)"
+        done
+        
+        # Validate JSON structure
+        python3 -c "
+        import json
+        try:
+            data = json.load(open('all_live_configs.json'))
+            if not isinstance(data.get('xray'), dict) or not isinstance(data.get('singbox'), dict):
+                raise ValueError('Invalid structure')
+            print('✅ JSON structure validated')
+        except Exception as e:
+            print(f'❌ JSON validation failed: {e}')
+            exit(1)
+        " || exit 1
+        
+        echo "✅ Enhanced scraper completed successfully"
+      env:
+        GH_PAT: ${{ secrets.GH_PAT }}
+        GITHUB_SEARCH_LIMIT: 150
+        MAX_CONFIGS_TO_TEST: 8000
+        MAX_TEST_WORKERS: 80
+        V2V_LOG_LEVEL: INFO 
+
+    - name: 📊 Calculate Statistics
+      id: stats
+      run: |
+        xray_count=$(python3 -c "
+        import json
+        try:
+            data = json.load(open('all_live_configs.json'))
+            count = sum(len(v) for v in data.get('xray', {}).values())
+            print(count)
+        except:
+            print('0')
+        " 2>/dev/null)
+        
+        singbox_count=$(python3 -c "
+        import json
+        try:
+            data = json.load(open('all_live_configs.json'))
+            count = sum(len(v) for v in data.get('singbox', {}).values())
+            print(count)
+        except:
+            print('0')
+        " 2>/dev/null)
+        
+        echo "xray_count=$xray_count" >> $GITHUB_OUTPUT
+        echo "singbox_count=$singbox_count" >> $GITHUB_OUTPUT
+        
+        echo "📊 Statistics: Xray=$xray_count, Sing-box=$singbox_count"
+      timeout-minutes: 2
+
+    - name: 🔍 Check for Changes
+      id: check_changes
+      run: |
+        git add all_live_configs.json clash_subscription.yml cache_version.txt
+        
+        if git diff --cached --exit-code > /dev/null 2>&1; then
+          echo "configs_updated=false" >> $GITHUB_OUTPUT
+          echo "ℹ️ No changes detected"
+        else
+          echo "configs_updated=true" >> $GITHUB_OUTPUT
+          echo "✅ Changes detected"
+        fi
+      timeout-minutes: 2
+
+    - name: 🔧 Configure Git
+      if: steps.check_changes.outputs.configs_updated == 'true'
+      run: |
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
+        git config --local core.autocrlf false
+        git config --local core.filemode false
+      timeout-minutes: 1
+
+    - name: 💾 Commit and Push Changes
+      if: steps.check_changes.outputs.configs_updated == 'true'
+      run: |
+        # Create detailed commit message
+        commit_msg="🤖 Enhanced V2V Update: Xray(${{ steps.stats.outputs.xray_count }}) + Sing-box(${{ steps.stats.outputs.singbox_count }}) configs [$(date -u '+%Y-%m-%d %H:%M UTC')]"
+        
+        git add all_live_configs.json clash_subscription.yml cache_version.txt
+        git commit -m "$commit_msg"
+        
+        # Push with retry mechanism
+        for i in {1..3}; do
+          if git push origin HEAD:${GITHUB_REF#refs/heads/}; then
+            echo "✅ Changes pushed successfully (attempt $i)"
+            break
+          else
+            echo "⚠️ Push failed, retrying in 10s... (attempt $i/3)"
+            sleep 10
+            git pull origin ${GITHUB_REF#refs/heads/} --rebase || true 
+          fi
+          
+          if [ $i -eq 3 ]; then
+            echo "❌ Failed to push after 3 attempts"
+            exit 1
+          fi
+        done
+        
+        echo "✅ Repository updated successfully"
+      timeout-minutes: 5
+
+  deploy_to_mirrors:
+    needs: enhanced_scraping
+    runs-on: ubuntu-latest
+    if: success() && needs.enhanced_scraping.outputs.configs_updated == 'true'
+    timeout-minutes: 20
+    
+    strategy:
+      matrix:
+        include:
+          - name: "Vercel"
+            id: "vercel"
+          - name: "Arvan Cloud" 
+            id: "arvan"
+      fail-fast: false
+    
+    steps:
+    - name: 🚀 Checkout Latest Changes
+      uses: actions/checkout@v4
+      with:
+        ref: ${{ github.ref }}
+        fetch-depth: 1
+      timeout-minutes: 3
+
+    - name: 🔍 Validate Files Pre-Deploy
+      run: |
+        echo "🔍 Validating files for ${{ matrix.name }} deployment..."
+        
+        required_files=("all_live_configs.json" "clash_subscription.yml" "cache_version.txt")
+        
+        for file in "${required_files[@]}"; do
+          if [ ! -f "$file" ]; then
+            echo "❌ Missing file: $file - creating placeholder"
+            case $file in
+              "all_live_configs.json")
+                echo '{"xray": {"vless": [], "vmess": [], "trojan": [], "ss": []}, "singbox": {"vless": [], "vmess": [], "trojan": [], "ss": [], "hy2": [], "tuic": []}}' > "$file"
+                ;;
+              "clash_subscription.yml")
+                echo 'proxies: []\nproxy-groups: []\nrules: ["MATCH,DIRECT"]' > "$file"
+                ;;
+              "cache_version.txt")
+                date +%s > "$file"
+                ;;
+            esac
+          else
+            file_size=$(wc -c < "$file")
+            echo "✅ $file: ${file_size} bytes"
+            
+            if [ "$file" = "all_live_configs.json" ] && [ "$file_size" -lt 50 ]; then
+              echo "⚠️ JSON file suspiciously small"
+            fi
+          fi
+        done
+        
+        # Validate JSON one more time
+        python3 -c "import json; json.load(open('all_live_configs.json'))" || {
+          echo "❌ Invalid JSON detected - creating valid structure"
+          echo '{"xray": {}, "singbox": {}}' > all_live_configs.json
+        }
+        
+        echo "✅ All files validated for ${{ matrix.name }}"
+      timeout-minutes: 2
+
+    - name: 🚀 Deploy to Vercel
+      if: matrix.id == 'vercel'
+      id: vercel_deploy
+      uses: amondnet/vercel-action@v25
+      with:
+        vercel-token: ${{ secrets.VERCEL_TOKEN }}
+        vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
+        vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
+        vercel-args: '--prod --force'
+        github-comment: false
+        github-deployment: false
+      continue-on-error: true
+      timeout-minutes: 10
+
+    # Deploy to Arvan Cloud S3  
+    - name: 🚀 Deploy to Arvan Cloud S3
+      if: matrix.id == 'arvan' && secrets.ARVAN_BUCKET_NAME != ''
+      id: arvan_deploy
+      uses: jakejarvis/s3-sync-action@master
+      with:
+        args: --acl public-read --delete --exclude ".git/*" --exclude ".github/*" --exclude "*.py" --exclude "README.md" --exclude "scraper.log" --exclude "*.md"
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.ARVAN_ACCESS_KEY }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.ARVAN_SECRET_ACCESS_KEY }}
+        AWS_S3_ENDPOINT: 'https://s3.ir-thr-at1.arvanstorage.ir'
+        AWS_S3_BUCKET: ${{ secrets.ARVAN_BUCKET_NAME }}
+        SOURCE_DIR: '.'
+      continue-on-error: true
+      timeout-minutes: 8
+
+    # Handle missing Arvan bucket name
+    - name: ⚠️ Arvan Bucket Missing
+      if: matrix.id == 'arvan' && secrets.ARVAN_BUCKET_NAME == ''
+      run: |
+        echo "WARNING: ARVAN_BUCKET_NAME secret is not set!"
+        echo "::warning::Arvan deployment skipped - missing ARVAN_BUCKET_NAME secret"
+        echo "::set-output name=outcome::skipped"
+      id: arvan_deploy
+
+    - name: 📊 Deployment Status
+      run: |
+        if [ "${{ matrix.id }}" = "vercel" ]; then
+          if [ "${{ steps.vercel_deploy.outcome }}" = "success" ]; then
+            echo "✅ Vercel deployment successful"
+            echo "🌐 URL: ${{ steps.vercel_deploy.outputs.preview-url }}"
+          else
+            echo "❌ Vercel deployment failed"
+          fi
+        elif [ "${{ matrix.id }}" = "arvan" ]; then
+          if [ "${{ steps.arvan_deploy.outcome }}" = "success" ]; then
+            echo "✅ Arvan Cloud deployment successful"
+          else
+            echo "❌ Arvan Cloud deployment failed"
+          fi
+        fi
+      timeout-minutes: 1
+
+  github_pages_deploy:
+    needs: [enhanced_scraping, deploy_to_mirrors]
+    runs-on: ubuntu-latest
+    if: success() && needs.enhanced_scraping.outputs.configs_updated == 'true'
+    timeout-minutes: 10
+    
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
+    
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    
+    steps:
+    - name: 🚀 Checkout Latest Changes
+      uses: actions/checkout@v4
+      with:
+        ref: ${{ github.ref }}
+        fetch-depth: 1
+
+    - name: ✅ Verify Existing Files
+      run: |
+        echo "🔍 Verifying existing project files..."
+        
+        for file in "index.html" "index.js"; do
+          if [ -f "$file" ]; then
+            echo "✅ Found existing $file ($(wc -c < "$file") bytes)"
+          else
+            echo "❌ $file not found! Cannot deploy Pages."
+            exit 1
+          fi
+        done
+        
+        for file in "all_live_configs.json" "clash_subscription.yml" "cache_version.txt"; do
+          if [ -f "$file" ]; then
+            echo "✅ Found $file ($(wc -c < "$file") bytes)"
+          else
+            echo "⚠️ Warning: $file not found - Deployment will be based on what's available."
+          fi
+        done
+        
+        echo "✅ File verification completed - using existing user files"
+      timeout-minutes: 1
+
+    - name: 🛠️ Setup Pages
+      uses: actions/configure-pages@v4
+
+    - name: 📤 Upload to Pages
+      uses: actions/upload-pages-artifact@v3
+      with:
+        path: '.'
+
+    - name: 🚀 Deploy to GitHub Pages
+      id: deployment
+      uses: actions/deploy-pages@v4
+      timeout-minutes: 5
+
+  final_status_report:
+    needs: [enhanced_scraping, deploy_to_mirrors, github_pages_deploy]
+    runs-on: ubuntu-latest
+    if: always() 
+    timeout-minutes: 5
+    
+    steps:
+    - name: 📊 Generate Comprehensive Status Report
+      run: |
+        echo "=================================================="
+        echo "🚀 ENHANCED V2V DEPLOYMENT STATUS REPORT"
+        echo "=================================================="
+        echo "⏰ Generated at: $(date -u '+%Y-%m-%d %H:%M:%S UTC')"
+        echo ""
+        
+        # Job statuses
+        scraper_status="${{ needs.enhanced_scraping.result }}"
+        mirrors_status="${{ needs.deploy_to_mirrors.result }}"
+        pages_status="${{ needs.github_pages_deploy.result }}"
+        
+        echo "📋 Job Results:"
+        echo "  🔧 Enhanced Scraper: $scraper_status"
+        echo "  🌐 Mirror Deployment: $mirrors_status"
+        echo "  📄 GitHub Pages: $pages_status"
+        echo ""
+        
+        # Configuration statistics
+        if [ "$scraper_status" = "success" ] && [ "${{ needs.enhanced_scraping.outputs.configs_updated }}" = "true" ]; then
+          xray_count="${{ needs.enhanced_scraping.outputs.xray_count }}"
+          singbox_count="${{ needs.enhanced_scraping.outputs.singbox_count }}"
+          total_count=$((xray_count + singbox_count))
+          
+          echo "📊 Configuration Statistics:"
+          echo "  🎯 Xray Configs: $xray_count"
+          echo "  📦 Sing-box Configs: $singbox_count"
+          echo "  📈 Total Configs: $total_count"
+          echo "  ✅ Configs Updated: Yes"
+        elif [ "$scraper_status" = "success" ]; then
+           echo "📊 Configuration Statistics:"
+           echo "  ℹ️ No new configuration changes detected"
+        else
+           echo "📊 Configuration Statistics:"
+           echo "  ❌ Scraping failed - no data available"
+        fi
+        echo ""
+        
+        # Mirror status summary
+        echo "🌐 Deployment Status Summary:"
+        echo "  📄 GitHub Pages: https://smbcryp.github.io/V2V/"
+        
+        if [ "$mirrors_status" = "success" ]; then
+          echo "  ✅ Mirror Deployments: Successful"
+        elif [ "$mirrors_status" = "failure" ]; then
+          echo "  ❌ Mirror Deployments: Failed (check logs)"
+        elif [ "$mirrors_status" = "skipped" ]; then
+          echo "  ℹ️ Mirror Deployments: Skipped (no changes or Scraper failed)"
+        else
+          echo "  ⚠️ Mirror Deployments: Status Unknown/Pending"
+        fi
+        echo ""
+        
+        # Overall assessment
+        if [ "$scraper_status" = "success" ] && [ "$pages_status" = "success" ]; then
+          echo "🎉 OVERALL STATUS: SUCCESS"
+          echo "✅ Core functionality and main deployment operational"
+        elif [ "$scraper_status" = "success" ]; then
+          echo "⚠️ OVERALL STATUS: PARTIAL SUCCESS"
+          echo "✅ Scraping successful, deployment issues detected (Mirrors/Pages)"
+        else
+          echo "❌ OVERALL STATUS: FAILURE"
+          echo "🚨 Core scraping failed - Investigation required"
+        fi
+        
+        echo ""
+        echo "📋 Quick Access URLs:"
+        echo "  📄 Main Config: https://smbcryp.github.io/V2V/all_live_configs.json"
+        echo "  ⚔️ Clash Config: https://smbcryp.github.io/V2V/clash_subscription.yml"
+        echo "  🕒 Cache Version: https://smbcryp.github.io/V2V/cache_version.txt"
+        echo ""
+        echo "=================================================="
+        echo "🔄 Next scheduled run: $(date -u -d '+3 hours' '+%Y-%m-%d %H:%M UTC')"
+        echo "=================================================="
+      timeout-minutes: 2
